--- a/Dissertation/part2.tex
+++ b/Dissertation/part2.tex
@@ -58,9 +58,9 @@
 В последующие годы были разработаны более быстрые алгоритмы вычисления преобразования Фурье. Одними из таких методов при определенных условиях является алгоритм Винограда, теоретико-числовое преобразование.
 
 В качестве главного способа измерения гармоник напряжения 
-ГОСТ Р 51317.4.7–2008 \cite{ГОСТР51317.4.7-2008} определяет дискретное преобразование Фурье (ДПФ) или быстрое преобразование Фурье (БПФ), которые применяются вместе с дополнительными операциями над данными, например, их сглаживание и взвешивание. Однако это не исключает применение других принципов анализа гармоник \cite{ГОСТР51317.4.7-2008}.
+ГОСТ Р 51317.4.7–2008 \cite{GOSTR51317.4.7-2008} определяет дискретное преобразование Фурье (ДПФ) или быстрое преобразование Фурье (БПФ), которые применяются вместе с дополнительными операциями над данными, например, их сглаживание и взвешивание. Однако это не исключает применение других принципов анализа гармоник \cite{GOSTR51317.4.7-2008}.
 
-Общая структура средств измерений (СИ), рекомендованная в \cite{ГОСТР51317.4.7-2008}, реализована на основе БПФ и представлена на рисунке \ref{img:picture7}. 
+Общая структура средств измерений (СИ), рекомендованная в \cite{GOSTR51317.4.7-2008}, реализована на основе БПФ и представлена на рисунке \ref{img:picture7}. 
 
 \begin{figure}[ht]
 	\centering
@@ -78,7 +78,7 @@
 Математической основой для анализа спектра сигналов является преобразование Фурье. Для дискретных сигналов применяется дискретное преобразование Фурье.
 
 Чтобы проанализировать алгоритмы определения частоты для оценки гармоник в частотной области часто используют подходы, основанные на дискретном преобразовании Фурье, которые
-реализованы с помощью быстрого преобразования Фурье \cite{vaseeva2019comparative}. В формуле \ref{eq:$f(t)$} показано разложение в ряд Фурье периодической функции $f(t)$ с периодом $2\pi$ на интервале $[0,2\pi]$:
+реализованы с помощью быстрого преобразования Фурье \cite{comparative_analysis_2019}. В формуле \ref{eq:$f(t)$} показано разложение в ряд Фурье периодической функции $f(t)$ с периодом $2\pi$ на интервале $[0,2\pi]$:
 
 \begin{equation}
 \label{eq:$f(t)$}
@@ -136,20 +136,12 @@ $N \bigtriangleup t$ -- основной период сигнала.
 Требуется выполнить процедуру измерения частоты дискретизации. Для передискретизации необходимо знать частоту основной гармоники.
 Перед выполнением БПФ-отчеты взвешиваются и умножаются на симметричную функцию. Для периодических сигналов и синхронизированных отчетов лучше использовать прямоугольную функцию взвешивания. 
 
-
-
-
-
-
-
-
-
 \section{Нижняя граница Крамера-Рао} \label{sec:ch2/sec5} %АНТИПЛАГИАТ=
 % Альтман Е. А., Васеева Т. В., Александров А. В. ГРАНИЦА КРАМЕРА-РАО ДЛЯ АМПЛИТУДЫ ГАРМОНИКИ ПРИ ИСПОЛЬЗОВАНИИ ОКОННЫХ ФУНКЦИЙ //Динамика систем, механизмов и машин. – 2020. – Т. 8. – №. 2. – С. 145-152.
 % ВВЕДЕНИЕ 
 Для определения точности полученных результатов алгоритмы можно проверить с помощью неравенства Крамера-Рао. В зарубежной литературе чаще встречается термин Cramer-Rao lower bound (CRLB), что обозначает <<нижняя граница Крамера-Рао>>. В неравенстве Крамера-Рао сигнал имеет наибольшую величину дисперсии при некоторых условиях. Если неравенство Крамера-Рао преобразуется в равенство, то оценка параметров считается наилучшей. Отсюда следует, что дисперсия данной оценки самая маленькая из возможных. 
 
-Несмещенная оценка, которая достигается нижней границей Крамера-Рао, называется эффективной. Такое решение обеспечивает наименьшую среднеквадратичную ошибку среди несмещенных методов и называется minimum variance unbiased (MVU)~--~<<оценкой с минимальной несмещенной дисперсией>> \cite{альтман2020граница}.
+Несмещенная оценка, которая достигается нижней границей Крамера-Рао, называется эффективной. Такое решение обеспечивает наименьшую среднеквадратичную ошибку среди несмещенных методов и называется minimum variance unbiased (MVU)~--~<<оценкой с минимальной несмещенной дисперсией>> \cite{altman2020boundary}.
 
 Информация Фишера играет важную роль в статическом моделировании для построения гипотез с использованием оценок максимального правдоподобия. Функция правдоподобия называется maximum likelihood estimation (MLE), то есть <<оценкой максимального правдоподобия>>. Если можно найти производную из функции правдоподобия, то решение первого порядка производной функции возможно с помощью метода наименьших квадратов. Чаще используют методы определения локальных максимумов и минимумов с помощью численных методов \cite{press1992art}.
 
@@ -339,7 +331,7 @@ $A^{'}$ -- амплитуда гармоники исходного сигнал
 \section{Граница крамера-рао амплитуды однотонального сигнала для методов ее оценки с использованием оконных функций} \label{sec:ch2/sec6} %АНТИПЛАГИАТ=90,62%
 % Васеева Т. В., Альтман Е. А. ГРАНИЦА КРАМЕРА-РАО АМПЛИТУДЫ ОДНОТОНАЛЬНОГО СИГНАЛА ДЛЯ МЕТОДОВ ЕЕ ОЦЕНКИ С ИСПОЛЬЗОВАНИЕМ ОКОННЫХ ФУНКЦИЙ //Инновационные проекты и технологии в образовании, промышленности и на транспорте. – 2021. – С.
 
-Граница Крамера-Рао позволяет найти минимальную дисперсию оценки параметра сигнала. Для гармонических сигналов известны различные формулы, которые оценивают параметры: дисперсии амплитуды, частоты и фазы гармоник. Известные алгоритмы оценки показывают результаты выше границы Крамера-Рао. В проведенных исследованиях \cite{альтман2020граница} вывелась формула для оценки минимальной дисперсии амплитуды гармоник для методов, использующих оконные функции. В данной статье более подробно рассмотрели влияние различных окон на сигнал. Полученные результаты позволят решать задачи выбора оконной функции для спектрального анализа.
+Граница Крамера-Рао позволяет найти минимальную дисперсию оценки параметра сигнала. Для гармонических сигналов известны различные формулы, которые оценивают параметры: дисперсии амплитуды, частоты и фазы гармоник. Известные алгоритмы оценки показывают результаты выше границы Крамера-Рао. В проведенных исследованиях \cite{altman2020boundary} вывелась формула для оценки минимальной дисперсии амплитуды гармоник для методов, использующих оконные функции. В данной статье более подробно рассмотрели влияние различных окон на сигнал. Полученные результаты позволят решать задачи выбора оконной функции для спектрального анализа.
 
 Модель напряжения $u_{t}$ рассматривается как сумма элементарных синусоидальных сигналов разных частот (1), которые кратны основной частоте, с наложенным аддитивным белым гауссовым шумом 
 %η(t):
@@ -363,7 +355,7 @@ $T_{s}$ -- период.
 	\caption{а – Напряжение до наложения на него окна Хемминга (слева), б – Напряжение после наложение на него окна.}\label{img:blending_process _and_Hamming_window}
 \end{figure}
 
-Рассмотрим оконные функции: Кайзера, Барлетта, Ханна, Хэмминга, Блэкмана (рисунок \ref{img:Windows}, приложение \ref{app:А}) \cite{васеева2020сравнительное,Increase_Accuracy_Yelizarov2014}. 
+Рассмотрим оконные функции: Кайзера, Барлетта, Ханна, Хэмминга, Блэкмана (рисунок \ref{img:Windows}, приложение \ref{app:А}) \cite{comparative_study2020,Increase_Accuracy_Yelizarov2014}. 
 %2. Васеева Т. В., Альтман Е. А., Александров А. В. Сравнительное исследование гармонических и интергармонических методов оценки сигналов //Инновационные проекты и технологии в образовании, промышленности и на транспорте. – 2020. – С. 51-57.
 %3. Елизаров Д. А. Повышение точности оценки показателей несинусоидальности напряжения в электроэнергетических системах //Омск: дис.… канд. техн. наук. – 2014.
 
@@ -377,7 +369,7 @@ $T_{s}$ -- период.
 
 Точность полученных результатов можно проверить с помощью неравенства Крамера-Рао (CRLB -- Cramer-Rao lower bound). В неравенстве Крамера-Рао сигнал имеет наибольшую величину дисперсии при некоторых условиях. Если неравенство Крамера-Рао преобразуется в равенство, то оценка параметров считается наилучшей. Отсюда следует, что дисперсия данной оценки самая маленькая из возможных.
 
-В статье \cite{альтман2020граница} мы промоделировали измерение амплитуды гармоник в однотональном сигнале. Была проверена формула \ref{eq:equation7} оценки дисперсии белого шума после наложения на него окна:
+В статье \cite{altman2020boundary} мы промоделировали измерение амплитуды гармоник в однотональном сигнале. Была проверена формула \ref{eq:equation7} оценки дисперсии белого шума после наложения на него окна:
 % 1. Альтман Е. А., Васеева Т. В., Александров А. В. Граница Крамера-Рао для амплитуды гармоники при использовании оконных функций //Динамика систем, механизмов и машин. – 2020. – Т. 8. – №. 2. – С. 145-152.
 
 Зависимость дисперсии сигнала с шумом от дисперсии сигнала с наложенным на него окном приведены на рисунке 3. Использовались параметры: $n\_point = 1000$ и $n\_test = 100$. Сплошной линией отображены результаты моделирования, штриховой -- результаты расчета по формуле \ref{eq:equation7}. Результаты моделирования при других параметрах аналогичны.
@@ -390,10 +382,11 @@ $T_{s}$ -- период.
 	\caption{Зависимость дисперсии шума после наложения окна от параметра окна Хэмминга.}\label{img:noise_win_var_hamming}
 \end{figure}
 
-Экспериментально проверили формулу \ref{eq:equation11} оценки дисперсии амплитуды гармоники в статье \cite{альтман2020граница}.
+Экспериментально проверили формулу \ref{eq:equation11} оценки дисперсии амплитуды гармоники в статье \cite{altman2020boundary}.
 % 1. Альтман Е. А., Васеева Т. В., Александров А. В. Граница Крамера-Рао для амплитуды гармоники при использовании оконных функций //Динамика систем, механизмов и машин. – 2020. – Т. 8. – №. 2. – С. 145-152.
 
 Результаты моделирования приведены на графиках (\ref{fig:windows_barlett_blackman,fig:windows__hamming_hanning, fig:windows__kaiser} 4-6).
+
 
 \begin{figure}[ht]
 	\begin{minipage}[b][][b]{0.49\linewidth}\centering
@@ -433,7 +426,7 @@ $T_{s}$ -- период.
 \end{figure}
 
 Штриховой линией приведены результаты расчетов по формуле \ref{eq:equation11}, сплошной -- результаты моделирования, линией из точек -- граница Крамера-Рао. 
-В статье \cite{альтман2020граница} введен параметр -- коэффициент увеличение дисперсии. Данный параметр показывает во сколько раз ухудшилась оценка амплитуды гармоники при использовании оконных функций (таблица \ref{tbl:test2_1}).
+В статье \cite{altman2020boundary} введен параметр -- коэффициент увеличение дисперсии. Данный параметр показывает во сколько раз ухудшилась оценка амплитуды гармоники при использовании оконных функций (таблица \ref{tbl:test2_1}).
 
 % 1. Альтман Е. А., Васеева Т. В., Александров А. В. Граница Крамера-Рао для амплитуды гармоники при использовании оконных функций //Динамика систем, механизмов и машин. – 2020. – Т. 8. – №. 2. – С. 145-152.
 
@@ -464,8 +457,8 @@ $T_{s}$ -- период.
 	\end{longtable*}%
 \end{table}
 
-Предложенная формула \ref{eq:equation7} оценки дисперсии белого шума после наложения на него окна \cite{альтман2020граница} может использоваться при выборе любой из рассмотренных оконных функций для решения задач спектрального анализа. Точность получаемой оценки амплитуды является наиболее значимым критерием.
-Формула \ref{eq:equation11} оценки дисперсии амплитуды \cite{альтман2020граница} дает наилучший результаты при выборе весовых функций: Кайзера ($\beta=4$), Хэмминга, Барлетта. Так как результаты расчетов по формуле и результаты моделирование близки к границе Крамера-Рао. Зависимость дисперсии оценки амплитуды от дисперсии шума (табл. 2) показывают, что чем меньше коэффициент увеличения дисперсии, тем точнее результаты. Наихудший результат показало окно Кайзера с параметром $\beta=15$.
+Предложенная формула \ref{eq:equation7} оценки дисперсии белого шума после наложения на него окна \cite{altman2020boundary} может использоваться при выборе любой из рассмотренных оконных функций для решения задач спектрального анализа. Точность получаемой оценки амплитуды является наиболее значимым критерием.
+Формула \ref{eq:equation11} оценки дисперсии амплитуды \cite{altman2020boundary} дает наилучший результаты при выборе весовых функций: Кайзера ($\beta=4$), Хэмминга, Барлетта. Так как результаты расчетов по формуле и результаты моделирование близки к границе Крамера-Рао. Зависимость дисперсии оценки амплитуды от дисперсии шума (табл. 2) показывают, что чем меньше коэффициент увеличения дисперсии, тем точнее результаты. Наихудший результат показало окно Кайзера с параметром $\beta=15$.
 
 
 
@@ -600,7 +593,7 @@ $T_{s}$ -- период.
 %\section{Оценка частоты энергосистемы с использованием дифференциатора наименьших средних квадратов} \label{sec:ch2/sec7}
 %
 %Частота энергосистемы является решающим фактором для мониторинга и контроля рабочего состояния сети, а также для синхронизации и управления электронными преобразователями мощности, подключенными к ней. Некоторые методы синхронизации, используемые в преобразователях мощности, подключенных к сети, основаны на точной оценке частоты сети. 
-%\cite{lee2013novel, lee2011active}. Несколько методов было разработано для получения частоты электросети, как описано в \cite{chen2013comparative}. На основе DFT \cite{borkowski2014interpolated,kamwa2004performance}, искусственная нейронная сеть \cite{jiang2014frequency}, частотно-замкнутый контур (FLL) \cite{fedele2014frequency}, широколинейная фаза наименьшего среднего значения (WLLMP) \cite{xia2014widely}, наименьшие квадраты (LS) \cite{kuvsljevic2013ls}, Комплексные наименьшие средние квадраты \cite{1458847, xia2014complex} наименьшие квадраты, примененные к фазовому углу \cite{ramos2015frequency}, улучшенный алгоритм рекурсивного ньютоновского типа (IRNTA) \cite{ray2015improved}, фильтр Калмана \cite{routray2002novel}, Prony \cite{rubeena2014accurate}, улучшенная фазовая автоподстройка частоты (EPLL) ) \cite{karimi2010application}, фаза кадра синхронной автоподстройки частоты (ОСР-ФАПЧ) \cite{golestan2013performance}, и переход через нуль \cite{ramos2005synchronizing} среди доступных методов оценки частоты.
+%\cite{lee2013novel, lee2011active}. Несколько методов было разработано для получения частоты электросети, как описано в \cite{chen2013comparative}. На основе DFT \cite{borkowski2014interpolated,kamwa2004performance}, искусственная нейронная сеть \cite{jiang2014frequency}, частотно-замкнутый контур (FLL) \cite{fedele2014frequency}, широколинейная фаза наименьшего среднего значения (WLLMP) \cite{xia2014widely}, наименьшие квадраты (LS) \cite{kuvsljevic2013ls}, Комплексные наименьшие средние квадраты \cite{1458847, xia2014complex} наименьшие квадраты, примененные к фазовому углу \cite{7065248}, улучшенный алгоритм рекурсивного ньютоновского типа (IRNTA) \cite{ray2015improved}, фильтр Калмана \cite{routray2002novel}, Prony \cite{rubeena2014accurate}, улучшенная фазовая автоподстройка частоты (EPLL) ) \cite{karimi2010application}, фаза кадра синхронной автоподстройки частоты (ОСР-ФАПЧ) \cite{golestan2013performance}, и переход через нуль \cite{ramos2005synchronizing} среди доступных методов оценки частоты.
 %Точность оценки частоты сильно зависит от помех в энергосистеме. Нарушения могут быть разделены на две основные группы: стационарное состояние и переходные процессы. Проблемы установившегося состояния включают несбалансированные напряжения, гармоники, низкочастотные колебания амплитуды и отклонения частоты. Временные проблемы включают в себя внезапные изменения основной формы волны напряжения и амплитуд и фаз гармоник, изменения частоты, скачки фазового угла, пики, вырезы, экспоненциальные затухающие компоненты и шум. Поскольку возмущения энергосистемы увеличиваются с распространением систем распределенной генерации и нелинейных нагрузок, крайне важно, чтобы алгоритм оценки частоты был невосприимчив к помехам. Одновременно алгоритм должен иметь достаточную пропускную способность для отслеживания изменений частоты. Компромисс между шириной полосы и отклонением помех является общим свойством для всех методов оценки частоты.
 %В этой статье предлагается метод оценки частоты, основанный на дифференцировании фазового угла комплексной синусоиды, полученной путем применения матрицы преобразования Кларка к напряжениям сетки. Насколько известно авторам, первые случаи использования фазовых углов для получения частоты сложной синусоиды были описаны Треттером \cite{tretter1985estimating} и Кейем \cite{kay1989fast}. МакКиллиам \cite{mckilliam2010frequency} предложил версию, более устойчивую к шуму за счет времени вычислений. Идея в \cite{tretter1985estimating} состоит в том, чтобы использовать метод наименьших квадратов (LSM), чтобы развернуть развернутый фазовый угол в прямую линию, где наклон указывает частоту. Таким образом, частота задается первой производной фаTзового угла. Таким образом, \cite{tretter1985estimating} дает те же результаты, что и применение фильтра Савицкого – Голея первого порядка \cite{schafer2011savitzky} к фазовым углам. Версия Kay \cite{kay1989fast} улучшает оценку, избегая шага разворачивания фазового угла, используя разности фазного угла назад. Другое тонкое улучшение заключается в том, что в версии Kay нет ограничения на то, что количество выборок должно быть нечетным. Вклад этой статьи: добавление фильтра скользящего среднего (MAF) для дальнейшего сглаживания оценки частоты и обеспечения полной оценки устойчивости оценщика к гармоникам напряжения и дисбалансам; разработка метода выбора количества выборок, используемых алгоритмом LMS; рекурсивная реализация алгоритма LMS.
 %
