--- a/Dissertation/part4.tex
+++ b/Dissertation/part4.tex
@@ -24,7 +24,7 @@
 передачи, распределения и потребления электрической энергии. Основопологащие документы:
 \begin{itemize}
 	\item Энергетическая стратегия политики России определяет цели и задачи развития страны в период до 2030 года, утвержденная распоряжением Правительства Российской Федерации от 13 ноября 2009~г. N 1715-р \cite{energy_strategy}. 
-	\item Федеральный закон от 26 июля 2019~г. № 261-ФЗ «Об энергосбережении и о повышении энергетической эффективности и о внесении изменений в отдельные законодательные акты Российской Федерации (с изменениями на 26 июля 2019~года)»\cite{law_energy saving_2019}.
+	\item Федеральный закон от 26 июля 2019~г. №~261-ФЗ «Об энергосбережении и о повышении энергетической эффективности и о внесении изменений в отдельные законодательные акты Российской Федерации (с изменениями на 26 июля 2019~года)»\cite{energy_saving_law_2019}.
 \end{itemize}
 
 
@@ -61,7 +61,7 @@
 \section{Понятие качества электрической энергии}\label{sec:ch4/sect1} 
 ГОСТ Р~--~государственный стандарт Российской Федерации, используется только на территории России.
 
-Повышение КЭ является основным фактором улучшения энергетической эффективности промышленных предприятий \cite{law_energy saving_2009}. 
+Повышение КЭ является основным фактором улучшения энергетической эффективности промышленных предприятий \cite{Energy_Saving2009}. 
 % [10 - Закон Ф. Об энергосбережении и о повышении энергетической эффективности и о внесении изменений в отдельные законодательные акты Российской Федерации //№ 261-ФЗ от 23.11. – 2009.]
 %http://www.consultant.ru/document/cons_doc_LAW_93978/
 
@@ -69,7 +69,7 @@
 
 Задача исследования -- улучшить показатели качества электрической энергии (ПКЭ) в электрических сетях систем электроснабжения, совершенствуя средства измерительных устройств для определения гармоник. При разработке технического устройства должны учитываться ПКЭ  согласно действующим нормативам. 
 
-Введен целый ряд нормативных документов (МЭК, ГОСТ). Изменение стандартов в области измерений электрической энергии показано на рисунке~\ref{img:picture1} \cite{GOST30804.4.30-2013, GOST30804.4.7-2013, GOST32144-2013, GOST R8.655-2009, GOSTR51317.4.15-2012,GOST33073-2014,GOST8.622-2013}. 
+Введен целый ряд нормативных документов (МЭК, ГОСТ). Изменение стандартов в области измерений электрической энергии показано на рисунке~\ref{img:picture1} \cite{GOST30804.4.30-2013, GOST30804.4.7-2013, GOST32144-2013, GOST_R8.655-2009, GOSTR51317.4.15-2012, GOST33073-2014, GOST8.622-2013}. 
 
 В работе рассмотрены методы контроля и анализа показателей качества электрической энергии, характеризующих несинусоидальность напряжения. Для анализа отклонения формы кривой от синусоиды напряжения разлагаются на спектральные составляющие. Таким образом, чтобы повысить точность измерения показателей несинусоидальности напряжения, необходимо уделить внимание повышению точности оценки спектральных составляющих напряжения. Для этого потребуется выполнить модернизацию существующих методов и необходимо создание нового алгоритма оценки гармонических и интергармонических составляющих напряжения. 
 
@@ -119,6 +119,10 @@
 	\item Для медленных изменений напряжения исключены режимы наименьших и наибольших нагрузок.
 	\item Добавлены таблицы классификации провалов напряжения по остаточному напряжению.
 \end{itemize}
+
+При невыполнении энергоснабжающей организации требований к ПКЭ (в соответствии с ГОСТ 32144-2013 \cite{GOST32144-2013}, обязательным к применению в соответствии с
+частью 1 статьи 46 Федерального закона от 27.12.2002 № 184-ФЗ «О техническом регулировании») наступает административная ответственность по статье $14.43$
+«Кодекса Российской Федерации об административных правонарушениях» \cite{Serkov2017Problems} %c. 53.
 
 Кроме Российских стандартов, существуют Международные регламентирующие документы по мониторингу КЭ, рекомендация от Института инженеров электротехники (IEEE -- Institute of Electrical and Electronics Engineers) \cite{IEEE_PES}. На рисунке \ref{img:picture2} изображен логотип IEEE.
 % [12 -	IEEE PES Power Quality Subcommittee [Электронный ресурс] / Режим доступа: https://site.ieee.org/pes-pq/]
