--- a/Dissertation/userpackages.tex
+++ b/Dissertation/userpackages.tex
@@ -44,3 +44,8 @@
       \renewcommand{\gitMarkFormat}{\rmfamily\color{Gray}\small\bfseries}
    }{}
 }{}
+
+\usepackage[warn]{mathtext}
+\usepackage{setspace,amsmath}
+\usepackage{amssymb} 
+\DeclareSymbolFont{T2Aletters}{T2A}{cmr}{m}{it}
