--- a/biblio/author.bib
+++ b/biblio/author.bib
@@ -1,6 +1,6 @@
 % Encoding: UTF-8
 
-@Article{альтман2020граница,
+@Article{altman2020boundary,
   author    = {Альтман, ЕА and Васеева, ТВ and Александров, АВ},
   journal   = {Динамика систем, механизмов и машин},
   title     = {Граница крамера-рао для амплитуды гармоники при использовании оконных функций},
