--- a/biblio/external.bib
+++ b/biblio/external.bib
@@ -42,19 +42,6 @@
   publisher = {IEEE},
 }
 
-@ARTICLE{vakbib2,
-  author = {Фамилия, И. О. and Фамилия2, И. О. and Фамилия3, И. О. and Фамилия4, И. О.},
-  addendum = {(0,33~п.~л.~/ 0,28~п.~л.; ВАК)},
-  title = {Название статьи},
-  journal = {Журнал},
-  year = {2014},
-  volume = {1},
-  number = {5},
-  pages = {100--120},
-  language = {russian},
-  authorvak = {true},
-}
-
 @Standard{GOST30804.4.30-2013,
   organization = {М.: Стандартинформ},
   title        = {ГОСТ 30804.4.30-2013 (IEC 61000-4-30:2008) Электрическая энергия. Совместимость технических средств электромагнитная. Методы измерений показателей качества электрической энергии (с Поправкой)},
@@ -258,10 +245,9 @@
   title        = {ГОСТ Р 51317.4.15-2012 (МЭК 61000-4-15:2010) Совместимость технических средств электромагнитная. Фликерметр. Функциональные и конструктивные требования},
   number       = {ГОСТ Р 51317.4.15-2012},
   url          = {http://docs.cntd.ru/document/1200096463},
-  year         = {2013},
   annotation   = {Действующий},
-  date         = {2012-01-01},
-  urldate      = {2019-11-16},
+  date         = {2013},
+  urldate      = {2021-03-15},
 }
 
 @Online{IEC,
@@ -287,9 +273,8 @@
   title        = {ГОСТ 8.622-2013 Государственная система обеспечения единства измерений (ГСИ). Испытательное оборудование для определения коэффициента проникания тест-аэрозоля через средства индивидуальной защиты органов дыхания. Методика аттестации},
   number       = {ГОСТ 8.622-2013},
   url          = {http://docs.cntd.ru/document/1200108162},
-  year         = {2013},
   annotation   = {Действующий},
-  date         = {2015-01-01},
+  date         = {2015},
   urldate      = {2019-12-06},
 }
 
@@ -664,15 +649,15 @@
   doi     = {10.1109/TIM.2014.2351291},
 }
 
-@Article{ramos2015frequency,
-  author    = {Ramos, Carlos Jo{\~a}o and Martins, Ant{\'o}nio P and Carvalho, Adriano S},
-  title     = {Frequency and phase-angle estimation using ordinary least squares},
-  journal   = {IEEE Transactions on Industrial Electronics},
-  year      = {2015},
-  volume    = {62},
-  number    = {9},
-  pages     = {5677--5688},
-  publisher = {IEEE} # url,
+@Article{7065248,
+  author  = {C. J. {Ramos} and A. P. {Martins} and A. S. {Carvalho}},
+  journal = {IEEE Transactions on Industrial Electronics},
+  title   = {Frequency and Phase-Angle Estimation Using Ordinary Least Squares},
+  year    = {2015},
+  number  = {9},
+  pages   = {5677-5688},
+  volume  = {62},
+  doi     = {10.1109/TIE.2015.2415756},
 }
 
 @Article{ray2015improved,
@@ -1221,7 +1206,7 @@
 @Online{spiral,
   title   = {Spiral},
   url     = {http://www.spiral.net/},
-  urldate = {2021-14-02},
+  urldate = {2021-03-15},
   year    = {2021},
 }
 
@@ -1334,6 +1319,258 @@
   year    = {2019},
   url     = {http://docs.cntd.ru/document/902186281},
   urldate = {2021-02-01},
+}
+
+@Article{Serkov2017Problems,
+  author    = {Серков, АВ},
+  journal   = {Промышленная энергетика},
+  title     = {Проблемы юридической ответственности за нарушение требований к качеству поставляемой энергии},
+  year      = {2017},
+  number    = {1},
+  pages     = {48--54},
+  publisher = {Закрытое акционерное общество" Научно-техническая фирма" Энергопрогресс"},
+}
+
+@Book{gonzalez2018digital,
+  author    = {Gonzalez, Rafael C and Woods, Richard E and others},
+  publisher = {Pearson},
+  title     = {Digital Image Processing, 4th Edition},
+  year      = {2018},
+  isbn      = {978-0-13335-672-4},
+  url       = {http://www.imageprocessingplace.com/downloads_V3/dip4e_downloads/dip4e_sample_book_material/dip4e_sample_chapters.pdf},
+  urldate   = {2021-03-15},
+}
+
+@Article{bondina2012comparative,
+  author    = {Бондина, Нина Николаевна and Калмычков, АС and Кривенцов, ВЭ},
+  journal   = {Вестник Национального технического университета Харьковский политехнический институт. Серия: Информатика и моделирование},
+  title     = {Сравнительный анализ алгоритмов фильтрации медицинских изображений},
+  year      = {2012},
+  number    = {38},
+  publisher = {Національний технічний університет {\guillemotleft}Харківський політехнічний інститут{\guillemotright}},
+}
+
+@Article{Soynikova2016high-performance,
+  author    = {Сойникова, ЕС and Батищев, ДС and Синюк, ВГ and Михелев, ВМ and others},
+  journal   = {Научный результат. Информационные технологии},
+  title     = {Высокопроизводительный метод анализа и морфологической обработки изображений},
+  year      = {2016},
+  number    = {3},
+  volume    = {1},
+  publisher = {Федеральное государственное автономное образовательное учреждение высшего~…},
+}
+
+@Article{gruzman2002digital,
+  author  = {Грузман, Игорь Семенович and Киричук, Валерий Сергеевич and Косых, Валерий Петрович and Перетягин, Георгий Иванович and Спектор, Александр Аншелевич},
+  journal = {Новосибирск: изд-во НГТУ},
+  title   = {Цифровая обработка изображений в информационных системах},
+  year    = {2002},
+  pages   = {6},
+  volume  = {352},
+}
+
+@InProceedings{7025588,
+  author    = {S. {Yoshizawa} and H. {Yokota}},
+  booktitle = {2014 IEEE International Conference on Image Processing (ICIP)},
+  title     = {Fast L1 Gaussian convolution via domain splitting},
+  year      = {2014},
+  pages     = {2908-2912},
+  doi       = {10.1109/ICIP.2014.7025588},
+}
+
+@Book{bluehut1989fast,
+  author    = {Блейхут, Ричард Э},
+  publisher = {Мир},
+  title     = {Быстрые алгоритмы цифровой обработки сигналов},
+  year      = {1989},
+}
+
+@Article{soni2014review,
+  author  = {Soni, Manish Kumar and Soni, Nisheet},
+  journal = {International Journal of Science, Engineering and Technology Research (IJSETR)},
+  title   = {Review of causes and effect of harmonics on power system},
+  year    = {2014},
+  number  = {2},
+  pages   = {214--220},
+  volume  = {3},
+}
+
+@Article{kamenka2014six,
+  author  = {Kamenka, Alexander},
+  journal = {The Schaffner Group, Luterbach},
+  title   = {Six tough topics about harmonic distortion and Power Quality indices in electric power systems},
+  year    = {2014},
+}
+
+@Book{Oppenheim2018Digital,
+  author    = {Оппенгейм, Алан and Шафер, Рональд},
+  publisher = {Litres},
+  title     = {Цифровая обработка сигналов},
+  year      = {2018},
+}
+
+@Book{sergienko2011digital,
+  author    = {Сергиенко, Александр Борисович},
+  publisher = {БХВ-Петербург},
+  title     = {Цифровая обработка сигналов},
+  year      = {2011},
+}
+
+@Article{Elizarov2012application,
+  author    = {Елизаров, Дмитрий Александрович},
+  journal   = {В мире научных открытий},
+  title     = {Применение метода чисел Фибоначчи для поиска максимума корреляционной функции},
+  year      = {2012},
+  number    = {1},
+  pages     = {28--38},
+  publisher = {Общество с ограниченной ответственностью Научно-инновационный центр},
+}
+
+@Article{Altman2012improvement,
+  author    = {Альтман, ЕА and Елизаров, ДА and Чижма, СН},
+  journal   = {Электротехнические комплексы и системы управления},
+  title     = {Совершенствование алгоритма определения параметров гармоник сигналов в электрической сети для оценки качества электроэнергии},
+  year      = {2012},
+  number    = {4},
+  pages     = {5--9},
+  publisher = {Закрытое акционерное общество" Воронежский инновационно-технологический центр"},
+}
+
+@Article{Altman2012formation,
+  author    = {Альтман, ЕА and Елизаров, ДА},
+  journal   = {Динамика систем, механизмов и машин},
+  title     = {Формирование эталонной функции с действительным спектром для оценки спектра сигнала электрической сети},
+  year      = {2012},
+  number    = {1},
+  publisher = {Федеральное государственное бюджетное образовательное учреждение высшего~…},
+}
+
+@Misc{Davenport1960introduction,
+  author    = {Давенпорт, ВБ and Рут, ВЛ},
+  title     = {Введение в теорию случайных сигналов и шумов. М.: ИЛ},
+  year      = {1960},
+  publisher = {M},
+}
+
+@Article{558515,
+  author  = {B. G. {Quinn}},
+  journal = {IEEE Transactions on Signal Processing},
+  title   = {Estimation of frequency, amplitude, and phase from the DFT of a time series},
+  year    = {1997},
+  number  = {3},
+  pages   = {814-817},
+  volume  = {45},
+  doi     = {10.1109/78.558515},
+}
+
+@InProceedings{550562,
+  author    = {Y. {Naito} and T. {Miyazaki} and I. {Kuroda}},
+  booktitle = {1996 IEEE International Conference on Acoustics, Speech, and Signal Processing Conference Proceedings},
+  title     = {A fast full-search motion estimation method for programmable processors with a multiply-accumulator},
+  year      = {1996},
+  pages     = {3221-3224 vol. 6},
+  volume    = {6},
+  doi       = {10.1109/ICASSP.1996.550562},
+}
+
+@Article{MOU1987377,
+  author   = {Z.J Mou and P Duhamel},
+  journal  = {Signal Processing},
+  title    = {Fast FIR filtering: Algorithms and implementations},
+  year     = {1987},
+  issn     = {0165-1684},
+  number   = {4},
+  pages    = {377-384},
+  volume   = {13},
+  doi      = {https://doi.org/10.1016/0165-1684(87)90019-3},
+  keywords = {Fast algorithm, FIR filtering, arithmetic complexity},
+  url      = {https://www.sciencedirect.com/science/article/pii/0165168487900193},
+}
+
+@Article{altman2015fast,
+  author    = {Альтман, Евгений Анатольевич and Захаренко, Елена Игоревна},
+  journal   = {Доклады Томского государственного университета систем управления и радиоэлектроники},
+  title     = {Быстрый алгоритм вычисления двумерной корреляции для видеообработки},
+  year      = {2015},
+  number    = {2 (36)},
+  publisher = {Федеральное государственное бюджетное образовательное учреждение высшего~…},
+}
+
+@Article{Rauscher2006basics,
+  author  = {Раушер, Кристоф and Йанссен, Ф and Минихольд, Р},
+  journal = {М.: Горячая линия-Телеком},
+  title   = {Основы спектрального анализа},
+  year    = {2006},
+}
+
+@Book{Thomasi2017electronic,
+  author    = {Томаси, Уэйн},
+  publisher = {Litres},
+  title     = {Электронные системы связи},
+  year      = {2017},
+}
+
+@InProceedings{gilbert2002near,
+  author    = {Gilbert, Anna C and Guha, Sudipto and Indyk, Piotr and Muthukrishnan, Shanmugavelayutham and Strauss, Martin},
+  booktitle = {Proceedings of the thiry-fourth annual ACM symposium on Theory of computing},
+  title     = {Near-optimal sparse Fourier representations via sampling},
+  year      = {2002},
+  pages     = {152--161},
+}
+
+@InProceedings{6986055,
+  author    = {J. {Schumacher} and M. {Püschel}},
+  booktitle = {2014 IEEE Workshop on Signal Processing Systems (SiPS)},
+  title     = {High-performance sparse fast Fourier transforms},
+  year      = {2014},
+  pages     = {1-6},
+  doi       = {10.1109/SiPS.2014.6986055},
+}
+
+@Article{4515960,
+  author  = {S. {Bay} and B. {Geller} and A. {Renaux} and J. {Barbot} and J. {Brossier}},
+  journal = {IEEE Signal Processing Letters},
+  title   = {On the Hybrid Cramér Rao Bound and Its Application to Dynamical Phase Estimation},
+  year    = {2008},
+  pages   = {453-456},
+  volume  = {15},
+  doi     = {10.1109/LSP.2008.921461},
+}
+
+@InProceedings{343082,
+  author    = {J. A. {Fessler} and A. O. {Hero}},
+  booktitle = {Proceedings of 36th Midwest Symposium on Circuits and Systems},
+  title     = {Cramer-Rao lower bounds for biased image reconstruction},
+  year      = {1993},
+  pages     = {253-256 vol.1},
+  doi       = {10.1109/MWSCAS.1993.343082},
+}
+
+@InProceedings{1439205,
+  author    = {N. {Noels} and H. {Steendam} and M. {Moeneclaey}},
+  booktitle = {IEEE 5th Workshop on Signal Processing Advances in Wireless Communications, 2004.},
+  title     = {On the Cramer-Rao lower bound and the performance of synchronizers for (turbo) encoded systems},
+  year      = {2004},
+  pages     = {69-73},
+  doi       = {10.1109/SPAWC.2004.1439205},
+}
+
+@Article{668800,
+  author  = {P. {Tichavsky} and C. H. {Muravchik} and A. {Nehorai}},
+  journal = {IEEE Transactions on Signal Processing},
+  title   = {Posterior Cramer-Rao bounds for discrete-time nonlinear filtering},
+  year    = {1998},
+  number  = {5},
+  pages   = {1386-1396},
+  volume  = {46},
+  doi     = {10.1109/78.668800},
+}
+
+@TechReport{tran1990cramer,
+  author      = {Tran, CV},
+  institution = {NAVAL OCEAN SYSTEMS CENTER SAN DIEGO CA},
+  title       = {Cramer-Rao Bound, MUSIC, and Maximum Likelihood. Effects of Temporal Phase Difference},
+  year        = {1990},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
