--- a/common/characteristic.tex
+++ b/common/characteristic.tex
@@ -1,15 +1,30 @@
 
 {\actuality} 
-Диссертационная работа посвящена совершенствованию методов оценки гармонических и интергармонических составляющих напряжения. Проблема является актуальной и требует новых решений по данным вопросам.
+Диссертационная работа посвящена совершенствованию математической модели многотонального сигнала и численных методов оценки параметров его гармоник. 
 
-%Известны алгоритмы, описывающие способы оценки спектральных составляющих напряжения: интерполяционные методы, метод корреляционных функций и усовершенствованные методы корреляционных функций, методы, рекомендованные в ГОСТ. При малом уровне шума (10 дБ) интерполяционные методы более практичны, чем методы корреляционных функций из-за высокой вычислительной сложности [7].
+Существуют различные сигналы, которые можно классифицировать:
+
+
+В работе \cite{Increase_Accuracy_Yelizarov2014} рассмотрены известны алгоритмы, описывающие способы оценки спектральных составляющих напряжения: интерполяционные методы, метод корреляционных функций и усовершенствованные методы корреляционных функций, методы, рекомендованные в ГОСТ. 
+% Елизаров Д. А. Повышение точности оценки показателей несинусоидальности напряжения в электроэнергетических системах //Омск: дис.… канд. техн. наук. – 2014.
+
+Спектральные составляющие, относящиеся к интергармоникам, обычно изменяются по амплитуде и по частоте. Интергармоники тока или напряжения являются спектральные составляющие между двумя гармоническими частотами. 
+
+Математической основой для анализа спектра сигналов является преобразование Фурье. Практически преобразование Фурье определяется с помощью систем цифровой обработки сигналов (ЦОС).
+Для дискретных сигналов применяется дискретное преобразование Фурье (ДПФ) или Быстрое преобразование Фурье (БПФ). БПФ является оптимальным с точки зрения быстродействия алгоритмом, реализующим ДПФ. 
+
+С увеличением силовых электронных систем, влияние интергармоник в системе эелектроснабжения стало более ощутимым. \cite{GOST30804.4.30-2013}
+
+В стандарте ГОСТ~30804.4.7-2013 \cite{GOST30804.4.7-2013} определены способы образования интергармонических групп путем группирования следующих друг за другом с частотой 5 Гц спектральных составляющих в интервале частот между последовательными гармоническими составляющими
+
+В работе предложены рекомендации по оценки гармоник и интергармоник напряжения быстрым методом корреляционных функций. 
+% 41.	Елизаров, Д.А. Повышение достоверности оценки показателей несинусоидальности напряжения в электроэнергетических системах / Е.А. Альтман, Д.А. Елизаров. // Приборы и методы измерений, контроля качества и диагностики в промышленности и на транспорте: Материалы Всероссийской науч.-техн. конф. с международным участием / Омский гос. техн. ун-т. Омск, 2013. С. 312-317. 
 %
-%% Елизаров Д. А. Повышение точности оценки показателей несинусоидальности напряжения в электроэнергетических системах //Омск: дис.… канд. техн. наук. – 2014.
-%
-%Спектр сигнала определяется зависимостью сигнала от времени. Временная область и частотная связанны друг с другом с помощью преобразования Фурье. Практически преобразование Фурье определяется с помощью систем цифровой обработки сигналов (ЦОС). Точность гармонических моделей может обеспечить цифровая обработка сигналов, при условии, что математической основой является Дискретное преобразование Фурье (ДПФ) или Быстрое преобразование Фурье (БПФ) [1-13]. Для анализа сигнала, преобразуют непрерывный сигнал в последовательность чисел (отчетов) и применяют алгоритм ускоренного вычисления дискретного преобразования Фурье (БПФ). С помощью отчетов непрерывный входной сигнал преобразуется в дискретный во времени сигнал.
-%
-%
-%
+
+
+
+
+
 %Алгоритмы оценки параметров гармоник, применяемые при работе с однональными и многотональными сигналами, имеют точность оценки параметров ниже теоретической границы Крамера-Рао. Граница Крамера-Рао позволяет найти минимальную дисперсию оценки параметра сигнала. Для гармонических сигналов известны формулы, оценивающие дисперсии амплитуды, частоты и фазы гармоник, однако, известные методы их оценки показывают результаты выше этой границы. В том числе не достигает границы Крамера-Рао и метод корреляционного анализа, который находит гармоники по методу максимального правдоподобия. 
 %
 %
@@ -101,7 +116,7 @@
 
 \item Инновационные проекты и технологии в образовании, промышленности и на транспорте. Материалы научной конференции, посвященной Дню Российской науки. Омский государственный университет путей сообщения. \cite{comparative_analysis2019}.
 
-\item Системы управления, информационные технологии и математическое моделирование. Материалы I Всероссийской научно-практической конференции с международным участием \cite{comparative_analysis}.
+\item Системы управления, информационные технологии и математическое моделирование. Материалы I Всероссийской научно-практической конференции с международным участием \cite{comparative_analysis_2019}.
 
 \item Проблемы машиноведения. Материалы III Международной научно-технической конференции \cite{cache_oriented2019}.
 
@@ -115,7 +130,7 @@
 %{\contribution} Автор принимал активное участие \ldots
 
 \ifnumequal{\value{bibliosel}}{0}
-{%%% Встроенная реализация с загрузкой файла через движок bibtex8. (При желании, внутри можно использовать обычные ссылки, наподобие `\cite{vakbib1,vakbib2}`).
+{%%% Встроенная реализация с загрузкой файла через движок bibtex8. (При желании, внутри можно использовать обычные ссылки, наподобие `\cite{bib1,vakbib2}`).
     {\publications} Основные результаты по теме диссертации изложены в XX печатных изданиях,
     X из которых изданы в журналах, рекомендованных ВАК,
     X "--- в тезисах докладов.
@@ -157,9 +172,9 @@
         % Процитированные здесь работы:
         %  * попадают в авторскую библиографию, при usefootcite==0 и стиле `\insertbiblioauthorimportant`.
         %  * ни на что не влияют в противном случае
-        \nocite{vakbib2}%vak
-        \nocite{bib1}%other
-        \nocite{confbib1}%conf
+%        \nocite{vakbib2}%vak
+%        \nocite{bib1}%other
+%        \nocite{confbib1}%conf
     \end{refsection}%
         %
         % Всё, что вне этих двух refsection, это refsection=0,
