--- a/images/IT/voltagedip_overexertion.tex
+++ b/images/IT/voltagedip_overexertion.tex
@@ -51,7 +51,7 @@
 
 
 % Фрагменты напржения
-\draw[ultra thick, red] (0,0) sin (0.25,1.5);
+%\draw[ultra thick, red] (0,0) sin (0.25,1.5);
 \draw[ultra thick, red] (0.25,1.5) cos (0.5,0);    
 \draw[ultra thick, red] (0.5,0) sin (0.75,-1.5);
 \draw[ultra thick, red] (0.75,-1.5) cos (1,0);
@@ -88,22 +88,22 @@
 \draw[ultra thick, red] (8,0) sin (8.25,1.5);
 \draw[ultra thick, red] (8.25,1.5) cos (8.5,0);   
 
-%\draw[ultra thick, violet] (8.5,0) sin (8.75,-0.75);
-%\draw[ultra thick, violet] (8.75,-0.75) cos (9,0);
-%\draw[ultra thick, violet] (9,0) sin (9.25,0.75);
-%\draw[ultra thick, violet] (9.25,0.75) cos (9.5,0); 
-%\draw[ultra thick, violet] (9.5,0) sin (9.75,-0.75);
-%\draw[ultra thick, violet] (9.75,-0.75) cos (10,0);
-%\draw[ultra thick, violet] (10,0) sin (10.25,0.75);
-%\draw[ultra thick, violet] (10.25,0.75) cos (10.5,0); 
-%\draw[ultra thick, violet] (10.5,0) sin (10.75,-0.75);
-%\draw[ultra thick, violet] (10.75,-0.75) cos (11,0);
-%\draw[ultra thick, violet] (11,0) sin (11.25,0.75);
-%\draw[ultra thick, violet] (11.25,0.75) cos (11.5,0); 
-%\draw[ultra thick, violet] (11.5,0) sin (11.75,-0.75);
-%\draw[ultra thick, violet] (11.75,-0.75) cos (12,0);
-%\draw[ultra thick, violet] (12,0) sin (12.25,0.75);
-%\draw[ultra thick, violet] (12.25,0.75) cos (12.5,0);
+\draw[ultra thick, violet] (8.5,0) sin (8.75,-0.75);
+\draw[ultra thick, violet] (8.75,-0.75) cos (9,0);
+\draw[ultra thick, violet] (9,0) sin (9.25,0.75);
+\draw[ultra thick, violet] (9.25,0.75) cos (9.5,0); 
+\draw[ultra thick, violet] (9.5,0) sin (9.75,-0.75);
+\draw[ultra thick, violet] (9.75,-0.75) cos (10,0);
+\draw[ultra thick, violet] (10,0) sin (10.25,0.75);
+\draw[ultra thick, violet] (10.25,0.75) cos (10.5,0); 
+\draw[ultra thick, violet] (10.5,0) sin (10.75,-0.75);
+\draw[ultra thick, violet] (10.75,-0.75) cos (11,0);
+\draw[ultra thick, violet] (11,0) sin (11.25,0.75);
+\draw[ultra thick, violet] (11.25,0.75) cos (11.5,0); 
+\draw[ultra thick, violet] (11.5,0) sin (11.75,-0.75);
+\draw[ultra thick, violet] (11.75,-0.75) cos (12,0);
+\draw[ultra thick, violet] (12,0) sin (12.25,0.75);
+\draw[ultra thick, violet] (12.25,0.75) cos (12.5,0);
 
 
 \end{tikzpicture}
