--- a/Dissertation/conclusion.tex
+++ b/Dissertation/conclusion.tex
@@ -7,15 +7,11 @@
 %% Поэтому имеет смысл сделать эту часть общей и загрузить из одного файла в автореферат и в диссертацию:
 
 Основные результаты работы заключаются в следующем.
-\input{common/concl}
-И какая-нибудь заключающая фраза.
+%\input{common/concl}
+%И какая-нибудь заключающая фраза.
 
-Последний параграф может включать благодарности.  В заключение автор
+В заключение автор
 выражает благодарность и большую признательность научному руководителю
-Иванову~И.\:И. за поддержку, помощь, обсуждение результатов и~научное
-руководство. Также автор благодарит Сидорова~А.\:А. и~Петрова~Б.\:Б.
-за помощь в~работе с~образцами, Рабиновича~В.\:В. за предоставленные
-образцы и~обсуждение результатов, Занудятину~Г.\:Г. и авторов шаблона
-*Russian-Phd-LaTeX-Dissertation-Template* за~помощь в оформлении
-диссертации. Автор также благодарит много разных людей
-и~всех, кто сделал настоящую работу автора возможной.
+Альтману~Е.\:А. за поддержку, помощь, обсуждение результатов и~научное
+руководство. Также автор благодарит заведующего кафедрой <<Автоматика и системы управления>> Малютина~А.\:Г. и старшего преподавателя Александрова~А.\:В.
+
