--- a/images/IT/Окно Кайзера.tex
+++ b/images/IT/Окно Кайзера.tex
@@ -17,7 +17,7 @@
 \begin{document}
 \begin{center}
 \begin{tikzpicture}[scale=3,decoration={brace,raise=5pt}]
-
+\begin{Large}
 % Нумерация по x
 \node[left] at (0,0){$0$};
 \node[left] at (0,0.5){$0.1$};
@@ -42,24 +42,23 @@
 \node[below] at (4,0){$1600$};
 \node[below] at (4.5,0){$1800$};
 \node[below] at (5,0){$2000$};
-
+\end{Large}
 % Оси и сетка
-\draw[->] (0,0) -- (5,0) coordinate (x axis) node[above] {$t$};
-\draw[->] (0,0) -- (0,5) coordinate (y axis) node[right] {$w(t)$};
+\draw[->] (0,0) -- (5,0) coordinate (x axis) node[above] {\LARGE{$t$}};
+\draw[->] (0,0) -- (0,5) coordinate (y axis) node[right] {\LARGE{$w(t)$}};
 
 % Наименования графиков
-\draw[very thin, red] (4.1, 4.9) sin (4.4, 4.9) node[right, black,] {$-\ окно \ Кайзера\ с параметром \ 4$};
-\draw[blue, dotted] (4.1, 4.6) sin (4.4, 4.6) node[right, black] {$-\ окно \ Кайзера\ с параметром \ 9$};
-\draw[very thin, red!50!blue, dashed] (4.1, 4.3) sin (4.4, 4.3) node[right, black] {$-\ окно\ Кайзера\ с параметром \ 10$};
-\draw[very thin, red!50!green,  dashed] (4.1, 4) sin (4.4, 4) node[right, black] {$-\ окно\ Кайзера\  с параметром \ 15$};
-\draw[red!50!green,  dotted] (4.1, 4) sin (4.4, 4);
+\draw[ultra thick, red] (4.1, 4.9) sin (4.3, 4.9) node[right, black,] {\LARGE{$\beta = \ 4$}};
+\draw[ultra thick, blue] (4.1, 4.6) sin (4.3, 4.6) node[right, black] {\LARGE{$\beta = \ 9$}};
+\draw[ultra thick, violet] (4.1, 4.3) sin (4.3, 4.3) node[right, black] {\LARGE{$\beta = \ 10$}};
+\draw[ultra thick, green] (4.1, 4) sin (4.3, 4) node[right, black] {\LARGE{$\beta  = \ 15$}};
+
 
 % Графики
-\draw[very thin, red] (0,0.5) sin (2.5,5) cos (5,0.5); % Кайзера 4
-\draw[blue, dotted] (0,0) cos (1,1) sin (2.5,5) cos (4,1) sin (5,0); % Кайзера 9
-\draw[very thin, red!50!blue, dashed] (0,0) cos (1,0.8) sin (2.5,5) cos (4,0.8) sin (5,0); % Кайзера 10
-\draw[very thin, red!50!green,  dashed] (0,0) cos (1.3,0.8) sin (2.5,5) cos (3.7,0.8) sin (5,0); % Кайзера 15
-\draw[red!50!green,  dotted] (0,0) cos (1.3,0.8) sin (2.5,5) cos (3.7,0.8) sin (5,0); % Кайзера 15
+\draw[ultra thick, red] (0,0.5) sin (2.5,5) cos (5,0.5); % Кайзера 4
+\draw[ultra thick, blue] (0,0) cos (1,1) sin (2.5,5) cos (4,1) sin (5,0); % Кайзера 9
+\draw[ultra thick, violet] (0,0) cos (1,0.8) sin (2.5,5) cos (4,0.8) sin (5,0); % Кайзера 10
+\draw[ultra thick, green] (0,0) cos (1.3,0.8) sin (2.5,5) cos (3.7,0.8) sin (5,0); % Кайзера 15
 \end{tikzpicture}
 \end{center}
 \end{document}
